--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <link rel="shortcut icon"  id="tabicon" href="favicon.ico" />
 
+
+
+    <script charset="utf-8">
+      
+    </script>
+
     <script>
     var _hmt = _hmt || [];
     (function() {
